--- a/app/templates/user/userHomepage.html
+++ b/app/templates/user/userHomepage.html
@@ -3,6 +3,8 @@
 {% block title %}Homepage{% endblock %}
 {% block content %}
 <h1>Welcome Back - {{ user_name }}</h1>
+
+{% if user_level in [2, 3, 4] %}
 <div class="menu-grid" style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 1%; width: 100%;">
     <a href="{{ url_for('user_ownTimetable')}}" style="text-decoration: none;">
         <div class="menu-section">
@@ -45,7 +47,6 @@
 </div><br>
 
 <div class="menu-grid" style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 1%; width: 100%;">
-    {% if user_level in [2, 3, 4] %}
     <a href="{{ url_for('user_mergeTimetable')}}" style="text-decoration: none;">
         <div class="menu-section">
             <h2>Merge Timetable</h2>
@@ -58,8 +59,8 @@
             </ul>
         </div>
     </a>
-    {% endif %}
 </div>
+{% endif %}
 
 {% if user_level == 1 %}    
 <div class="dashboard-row" style="grid-template-columns: repeat(5, 1fr);">
@@ -125,6 +126,7 @@
                         <th>Exam Day</th>
                         <th>Exam Time</th>
                         <th>Exam Period</th>
+                        <th>Exam Venue</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -136,6 +138,7 @@
                         <td>{{ c.report.exam.examStartTime.strftime("%A") }} - {{ c.report.exam.examEndTime.strftime("%A") }}</td>
                         <td>{{ c.report.exam.examStartTime.strftime("%H:%M") }} - {{ c.report.exam.examEndTime.strftime("%H:%M") }}</td>
                         <td>{{ (c.report.exam.examEndTime - c.report.exam.examStartTime).seconds // 3600 }}h {{ ((c.report.exam.examEndTime - c.report.exam.examStartTime).seconds % 3600) // 60 }}m</td>
+                        <td>{{ c.report.exam.examVenue }}</td>
                     </tr>
                     {% endfor %}
                 </tbody>
@@ -143,5 +146,47 @@
         </div>
     </div>
 </form><br>
+
+<form action="{{ url_for('user_homepage') }}" method="POST">
+    <div style="padding: 10px;">
+        <h2>Open Public Own Selection Invigilation Slot</h2>
+        <div class="user-table-container">
+            <table class="user-data-table">
+                <thead>
+                    <tr>
+                        <th>Course Name</th>
+                        <th>Course Code</th>
+                        <th>Exam Date</th>
+                        <th>Exam Day</th>
+                        <th>Exam Time</th>
+                        <th>Exam Period</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for a in open %}
+                    <tr>
+                        <td>{{ a.report.exam.course.courseName }}</td>
+                        <td>{{ a.report.exam.course.courseCodeSectionIntake }}</td>
+                        <td>{{ a.report.exam.examStartTime.strftime("%d/%b/%Y") }} - {{ a.report.exam.examEndTime.strftime("%d/%b/%Y") }}</td>
+                        <td>{{ a.report.exam.examStartTime.strftime("%A") }} - {{ a.report.exam.examEndTime.strftime("%A") }}</td>
+                        <td>{{ a.report.exam.examStartTime.strftime("%H:%M") }} - {{ a.report.exam.examEndTime.strftime("%H:%M") }}</td>
+                        <td>
+                            {{ (a.report.exam.examEndTime - a.report.exam.examStartTime).seconds // 3600 }}h 
+                            {{ ((a.report.exam.examEndTime - a.report.exam.examStartTime).seconds % 3600) // 60 }}m
+                        </td>
+                        <td>
+                            <input type="hidden" name="a_id" value="{{ a.attendanceId }}">
+                            <button type="submit" name="action" value="open_accept" style="background-color: #d4edda; color: #155724; padding: 5%;">
+                                Accept
+                            </button>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+</form>
 {% endif %}
 {% endblock %}
