--- a/app/templates/user/userInvigilationReport.html
+++ b/app/templates/user/userInvigilationReport.html
@@ -112,9 +112,9 @@
                             </td>
                             <td>
                                 {% if att.invigilationStatus == 1 %}
-                                    <span class="status frame-green">[Accepted]</span>
+                                    <span class="status frame-green">[ACCEPTED]</span>
                                 {% else %}
-                                    <span class="status frame-oren">[Pending]</span>
+                                    <span class="status frame-oren">[PENDING]</span>
                                 {% endif %}
                             </td>
                         </tr>
