--- a/app/templates/admin/adminBase.html
+++ b/app/templates/admin/adminBase.html
@@ -47,7 +47,7 @@
                     <span>Manage Staff</span>
                 </a>
                 <a href="{{ url_for('admin_manageTimetable') }}" class="tab-link {% if active_tab == 'admin_manageTimetabletab' %}active{% endif %}">
-                    <i class="fas fa-calendar-days"></i>
+                    <i class="fas fa-calendar-check"></i>
                     <span>Manage Timetable</span>
                 </a>
                 <a href="{{ url_for('admin_manageInvigilationTimetable') }}" class="tab-link {% if active_tab == 'admin_manageInvigilationTimetabletab' %}active{% endif %}">
