--- a/app/templates/auth/attendance.html
+++ b/app/templates/auth/attendance.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <form method="POST">
+    <form method="POST" style="width: 50%">
         <h1>Attendance Check In/Out</h1>
         <br>
         <div class="form-container">
