--- a/app/templates/auth/attendance.html
+++ b/app/templates/auth/attendance.html
@@ -7,13 +7,13 @@
 </head>
 
 <body>
-    <form method="POST" style="width: 50%">
+    <form method="POST" style="width: 80%">
         <h1>Attendance Check In/Out</h1>
         <br>
         <div class="form-container">
             <!-- Frame for Punch Card container -->
-            <div class="input-container" style="width: 60%;">
-                <label>Scan Card</label>
+            <div class="input-container" style="width: 60%; align-items: center;">
+                <h3>Scan Card</h3>
                 <input type="email" name="login_field" value="{{ login_text }}" required>
             </div><br>
         </div>
