--- a/app/templates/auth/attendance.html
+++ b/app/templates/auth/attendance.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <form method="POST" style="width: 80%">
+    <form method="POST" style="width: 50%">
         <h1>Attendance Check In/Out</h1>
         <br>
         <div class="form-container">
@@ -22,13 +22,7 @@
             <table class="user-data-table">
                 <thead>
                     <tr>
-                        <th>Course Name</th>
-                        <th>Course Code</th>
-                        <th>Exam Date</th>
-                        <th>Exam Day</th>
-                        <th>Exam Time</th>
-                        <th>Exam Period</th>
-                        <th>Exam Venue</th>
+                        <th>Exam Details</th>
                         <th>Clock In</th>
                         <th>Clock Out</th>
                     </tr>
@@ -36,15 +30,28 @@
                 <tbody>
                     {% for c in confirm %}
                     <tr>
-                        <td>{{ c.report.exam.course.courseName }}</td>
-                        <td>{{ c.report.exam.course.courseCodeSectionIntake }}</td>
-                        <td>{{ c.report.exam.examStartTime.strftime("%d/%b/%Y") }} - {{ c.report.exam.examEndTime.strftime("%d/%b/%Y") }}</td>
-                        <td>{{ c.report.exam.examStartTime.strftime("%A") }} - {{ c.report.exam.examEndTime.strftime("%A") }}</td>
-                        <td>{{ c.report.exam.examStartTime.strftime("%H:%M") }} - {{ c.report.exam.examEndTime.strftime("%H:%M") }}</td>
-                        <td>{{ (c.report.exam.examEndTime - c.report.exam.examStartTime).seconds // 3600 }}h {{ ((c.report.exam.examEndTime - c.report.exam.examStartTime).seconds % 3600) // 60 }}m</td>
-                        <td>{{ c.report.exam.examVenue }}</td>
-                        <td>{{ c.checkIn }}</td>
-                        <td>{{ c.checkOut }}</td>
+                        <td>
+                            <div class="info-grid">
+                                <div>Course Name</div><div><strong>: {{ c.report.exam.course.courseName }}</strong></div>
+                                <div>Course Code/Section</div><div><strong>: {{ c.report.exam.course.courseCodeSectionIntake }}</strong></div>
+                                <div>Number of Students</div><div><strong>: {{ c.report.exam.course.courseStudent }}</strong></div>
+                                <div>Exam Date</div><div><strong>: {{ c.report.exam.examStartTime.strftime("%d/%b/%Y") }} - {{ c.report.exam.examEndTime.strftime("%d/%b/%Y") }}</strong></div>
+                                <div>Exam Day</div><div><strong>: {{ c.report.exam.examStartTime.strftime("%A") }} - {{ c.report.exam.examEndTime.strftime("%A") }}</strong></div>
+                                <div>Exam Time</div><div><strong>: {{ c.report.exam.examStartTime.strftime("%H:%M") }} - {{ c.report.exam.examEndTime.strftime("%H:%M") }}</strong></div>
+                                <div>Exam Period</div><div><strong>: {{ (c.report.exam.examEndTime - c.report.exam.examStartTime).seconds // 3600 }}h {{ ((c.report.exam.examEndTime - c.report.exam.examStartTime).seconds % 3600) // 60 }}m</strong></div>
+                                <div>Exam Venue</div><div><strong>: {{ c.report.exam.examVenue }}</strong></div>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="info-grid">
+                                <div>Clock In</div><div><strong>: {{ c.report.checkIn }}</strong></div>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="info-grid">
+                                <div>Clock Out</div><div><strong>: {{ c.report.checkOut }}</strong></div>
+                            </div>
+                        </td>
                     </tr>
                     {% endfor %}
                 </tbody>
