--- a/app/templates/user/userInvigilationReport.html
+++ b/app/templates/user/userInvigilationReport.html
@@ -5,28 +5,12 @@
 <div class="menu-section">
     <div class="dashboard-row" style="grid-template-columns: repeat(8, 1fr);">
         <div class="dashboard-frame">
-            <h3>Active Reports</h3>
+            <h3>Pending Active Invigilation Report</h3>
             <p class="dashboard-text">{{ total_activeReport }}</p>
         </div>
         <div class="dashboard-frame">
-            <h3>Pass Reports</h3>
+            <h3>Completed Invigilation Duties</h3>
             <p class="dashboard-text">{{ total_report - total_activeReport }}</p>
-        </div>
-        <div class="dashboard-frame">
-            <h3>Exam In Going</h3>
-            <p class="dashboard-text" style="color:green;">{{ total_inProgress }}</p>
-        </div>
-        <div class="dashboard-frame">
-            <h3>Pending Check-In/Out</h3>
-            <p class="dashboard-text" style="color:red;">{{ total_checkInOut }}</p>
-        </div>
-        <div class="dashboard-frame">
-            <h3>Checked In On Time</h3>
-            <p class="dashboard-text" style="color:green;">{{ total_checkInOnTime }}</p>
-        </div>
-        <div class="dashboard-frame">
-            <h3>Checked Out On Time</h3>
-            <p class="dashboard-text" style="color:green;">{{ total_checkOutOnTime }}</p>
         </div>
         <div class="dashboard-frame">
             <h3>Checked In Late</h3>
