--- a/app/templates/user/userInvigilationReport.html
+++ b/app/templates/user/userInvigilationReport.html
@@ -3,9 +3,9 @@
 {% block head_title %}<h2>Invigilation Report</h2>{% endblock %}
 {% block content %}
 <div class="menu-section">
-    <div class="dashboard-row" style="grid-template-columns: repeat(8, 1fr);">
+    <div class="dashboard-row">
         <div class="dashboard-frame">
-            <h3>Pending Active Invigilation Report</h3>
+            <h3>Pending Invigilation Duties</h3>
             <p class="dashboard-text">{{ total_activeReport }}</p>
         </div>
         <div class="dashboard-frame">
