--- a/app/templates/user/userInvigilationReport.html
+++ b/app/templates/user/userInvigilationReport.html
@@ -79,7 +79,8 @@
                             <td>
                                 <div class="info-grid">
                                     <div>Check-in Time</div><div><strong>: {{ att.checkIn }}</strong></div>
-                                    <div>Check-out Time</div><div><strong>: {{ att.checkIn }}</strong></div>
+                                    <div>Check-out Time</div><div><strong>: {{ att.checkOut }}</strong></div>
+                                    <div>Total Invigilation Hour</div><div><strong>: {{ att.checkOut - att.checkIn }}</strong></div>
                                 </div>
                             </td>
 
