--- a/app/templates/user/userInvigilationReport.html
+++ b/app/templates/user/userInvigilationReport.html
@@ -80,7 +80,12 @@
                                 <div class="info-grid">
                                     <div>Check-in Time</div><div><strong>: {{ att.checkIn }}</strong></div>
                                     <div>Check-out Time</div><div><strong>: {{ att.checkOut }}</strong></div>
-                                    <span style="background-color: green;"><div>Total Invigilation Hour</div><div><strong>: {{ att.checkOut - att.checkIn }}</strong></div></span>
+                                    <span style="background-color: green;">
+                                        <div>Total Invigilation Hour</div>
+                                        <div>
+                                            <strong>: {{ ((att.checkOut - att.checkIn).total_seconds() / 3600) | round(2) }} hours</strong>
+                                        </div>
+                                    </span>
                                 </div>
                             </td>
 
