--- a/app/templates/user/userInvigilationReport.html
+++ b/app/templates/user/userInvigilationReport.html
@@ -83,7 +83,7 @@
                                     <span style="background-color: green;">
                                         <div>Total Invigilation Hour</div>
                                         <div>
-                                            <strong>: {{ ((att.checkOut - att.checkIn).total_seconds() / 3600) | round(2) }} hours</strong>
+                                            <strong>: {{att.checkIn }} hours</strong>
                                         </div>
                                     </span>
                                 </div>
