--- a/app/templates/user/userInvigilationReport.html
+++ b/app/templates/user/userInvigilationReport.html
@@ -80,12 +80,7 @@
                                 <div class="info-grid">
                                     <div>Check-in Time</div><div><strong>: {{ att.checkIn }}</strong></div>
                                     <div>Check-out Time</div><div><strong>: {{ att.checkOut }}</strong></div>
-                                    <span style="background-color: green;">
-                                        <div>Total Invigilation Hour</div>
-                                        <div>
-                                            <strong>: {{att.checkIn }} hours</strong>
-                                        </div>
-                                    </span>
+                                    <div style="color: #00b300">Total Invigilation Hour</div><div><strong>: {{ att.checkIn }}</strong></div>
                                 </div>
                             </td>
 
