--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -1,11 +1,16 @@
 {% extends "admin/adminBase.html" %}
 {% set show_tabs = true %}
 {% set show_upload = false %}
-{% set show_dashboard = false %}
+{% set show_dashboard = true %}
 {% set show_manual = true %}
 {% set show_edit = true %}
 {% block title %}Admin ManageVenue{% endblock %}
 {% block head_title %}<h2>Manage Venue</h2>{% endblock %}
+
+{% block dashboard_section %}
+{% endblock %}
+
+
 
 {% block manual_section %}
 <!-- Manual Form -->
