--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -18,7 +18,7 @@
                     <p class="dashboard-text">{{ exam_data|length }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Activated Exams</h3>
+                    <h3>Upcoming Exams</h3>
                     <p class="dashboard-text" style="color:green;">{{ total_exam_activated }}</p>
                 </div>
                 <div class="dashboard-frame">
