--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -8,7 +8,10 @@
 {% block head_title %}<h2>Manage Venue</h2>{% endblock %}
 
 {% block dashboard_section %}
-<form>
+<!-- Dashboard Form -->
+<form id="dashboardForm" action="{{ url_for('admin_manageVenue') }}" method="POST">
+    <div id="dashboardSection">
+    </div>
 </form>
 {% endblock %}
 
