--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -22,7 +22,7 @@
                     <p class="dashboard-text" style="color:green;">{{ total_exam_activated }}</p>
                 </div>
                 <div class="dashboard-frame">
-                    <h3>Passed Exams</h3>
+                    <h3>Completed Exams</h3>
                     <p class="dashboard-text" style="color:red;">{{ exam_data|length - total_exam_activated }}</p>
                 </div>
                 <div class="dashboard-frame">
