--- a/app/templates/user/userInvigilationTimetable.html
+++ b/app/templates/user/userInvigilationTimetable.html
@@ -20,16 +20,8 @@
     </div><br>
 
     <div class="calendar-container">
-        <!-- Time Header Row -->
-        <div class="calendar-row">
-            <div class="calendar-date-label"></div>
-            {% for hour in range(0, 24) %}  
-                <div class="calendar-hour">{{ "%02d:00"|format(hour) }}</div>
-            {% endfor %}
-        </div>
-
-        {% set hour_width = 111 %}
-        {% for date in full_dates %}
+        {% set hour_width = 80 %}
+        {% for date in valid_dates %}
             {% set exams = calendar_data.get(date, []) %}
             {% set sorted_exams = exams | sort(attribute='start_time') %}
             {% set positions = [] %}
@@ -50,13 +42,7 @@
                     {% for i in range(sorted_exams|length) %}
                         {% set exam = sorted_exams[i] %}
                         {% set pos = positions[i] %}
-                        {% set start_hour = exam.start_time.hour + (exam.start_time.minute / 60) %}
-                        {% set end_hour = exam.end_time.hour + (exam.end_time.minute / 60) %}
-                        {% set left_pos = 10 + start_hour * hour_width %}
-                        {% set width = (end_hour - start_hour) * hour_width %}
-                        {% if width <= 111 %}
-                            {% set width = width - 10 %}
-                        {% endif %}
+                        {% set left_pos = 10 + (exam.start_time.hour * hour_width) %}
                         {% set top_pos = 5 + (pos.row * 70) %}
 
                         {% if exam.is_overnight %}
@@ -67,8 +53,12 @@
                             {% set block_color = 'lightgrey' %}
                         {% endif %}
 
+                        <!-- ✅ Fixed width for all blocks -->
                         <div class="exam-block"
-                            style="background-color: {{ block_color }}; left:{{ left_pos }}px; width:{{ width }}px; top:{{ top_pos }}px;">
+                            style="background-color: {{ block_color }};
+                                left: {{ left_pos }}px;
+                                width: 200px;  /* fixed width */
+                                top: {{ top_pos }}px;">
                             <strong>{{ exam.course_code }}</strong><br>
                             {{ exam.course_name }}<br>
                             <i>{{ exam.venue }}<br>{{ exam.start_time.strftime("%H:%M") }}–{{ exam.end_time.strftime("%H:%M") }}</i>
