--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -119,13 +119,7 @@
                                     <div class="info-grid">
                                         <div>Check-in Time</div><div><strong>: {{ att.checkIn.strftime("%Y-%m-%d %H:%M") }}</strong></div>
                                         <div>Check-out Time</div><div><strong>: {{ att.checkOut.strftime("%Y-%m-%d %H:%M") }}</strong></div>
-                                        {% set duration = att.checkOut - att.checkIn %}
-                                        {% set hours = duration.total_seconds() // 3600 %}
-                                        {% set minutes = (duration.total_seconds() % 3600) // 60 %}
-                                        <div>Total Invigilation Time</div>
-                                        <div style="color: green; white-space: nowrap;">
-                                            <strong>: {{ "%d hr %d min"|format(hours, minutes) }}</strong>
-                                        </div>
+                                        <div style="color: green;">Total Invigilation Time</div><div><strong>None</strong></div>
                                     </div>
                                 {% else %}
                                     <em class="status frame-waiting">IN PROCESSING</em>
